# root-schema

./: .gitignore  CMakeLists.txt  README.md
app/: basicApp.cxx
include/: CMakeLists.txt  basicLib.h
src/: basicLib.cxx
